testsuite/tests/test/157_ops/test.ads
with Foo; use Foo;

package Test is

   function "&" (L : Integer; R : Foo.Test) return Foo.Test is (R);

end Test;
